fix: isBlank()로 변경